chi/org.eclipse.escet.chi.tests/tests/spec/expr/binop-index-dict.run.err
ERROR: Runtime error while executing "M".
at model "M" near line 18.
CAUSE: Key "3" does not exist in the dictionary.
