chi/org.eclipse.escet.chi.tests/tests/spec/expr/binop-index-dict.chi
################################################################################
# Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the terms
# of the MIT License which is available at https://opensource.org/licenses/MIT
#
# SPDX-License-Identifier: MIT
#################################################################################

model M():
    dict(int:real) d = {1:1.1, 2:2.2};

    writeln("%s", d[1]);
    writeln("%s", d[2]);
    writeln("%s", d[3]);
end
